--- a/fsd-projects/platformer/platformer.css
+++ b/fsd-projects/platformer/platformer.css
@@ -3,7 +3,7 @@ body {
 }
 
 canvas {
-  background-color: lightblue;
+  background-image: url(https://static.vecteezy.com/system/resources/previews/015/485/683/non_2x/destroyed-buildings-on-city-street-after-war-free-vector.jpg);
   margin: 20px;
 }
 
